--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.4"
   },
   "scripts": {
-    "dev": "nodemon --ignore data/ app.js"
+    "dev": "nodemon app.js"
+  }, 
+  "nodemonConfig": {
+    "ignore": ["**/data/**"], 
+    "ext": "js, mjs, json, ts, html"
   }
 }
